<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.entrada.VehiculosEntradaActivity"
    style="@style/styleApp"
    android:id="@+id/entradaVehiculos">
    <ImageView
        android:id="@+id/imgc5"
        style="@style/imagenC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>
    <TextView
        android:id="@+id/tvTitleRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tvTitleSubMenu"
        android:text="@string/registroEndtrada"
        app:layout_constraintStart_toEndOf="@id/imgc5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleRE"/>

    <TextView
        android:id="@+id/tvTitleRE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tvTitleSubMenu"
        android:text="@string/registraVehiculo"
        app:layout_constraintStart_toEndOf="@id/imgc5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRegistro"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/lPadreVe"/>
    <ScrollView
        android:id="@+id/lPadreVe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgc5"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarEntradaVehiculos">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"

            >

            <EditText
                android:id="@+id/conductorEt"
                style="@style/ediTextLinear"
                android:layout_width="match_parent"
                android:hint="@string/nombreConductor"
                android:inputType="text" />

            <EditText
                android:id="@+id/acompanianteEt"
                style="@style/ediTextLinear"
                android:layout_width="match_parent"
                android:hint="@string/acompaniantes"
                android:inputType="number" />

            <EditText
                android:id="@+id/placaEt"
                style="@style/ediTextLinear"
                android:layout_width="match_parent"
                android:hint="@string/placas"
                android:inputType="text" />

            <EditText
                android:id="@+id/modeloEt"
                style="@style/ediTextLinear"
                android:layout_width="match_parent"
                android:hint="@string/modelo"
                android:inputType="text" />

            <EditText
                android:id="@+id/colorEt"
                style="@style/ediTextLinear"
                android:layout_width="match_parent"
                android:hint="@string/color"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnGuardarEntradaVehiculos"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/guardar"
        style="@style/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lPadreVe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>