<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.salida.VisitasSalidaActivity"
    style="@style/styleApp"
    android:id="@+id/visitasSalida">
    <ImageView
        android:id="@+id/imgc5"
        style="@style/imagenC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>
    <TextView
        android:id="@+id/tvTitleRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tvTitleSubMenu"
        android:text="@string/registroSalida"
        app:layout_constraintStart_toEndOf="@id/imgc5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleRE"/>

    <TextView
        android:id="@+id/tvTitleRE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tvTitleSubMenu"
        android:text="@string/registraVisita"
        app:layout_constraintStart_toEndOf="@id/imgc5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRegistro"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/lPadreVi"/>

    <LinearLayout
        android:id="@+id/lPadreVi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgc5"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarSalidaVisitas"
        >
        <EditText
            android:id="@+id/noTarjetaEt"
            android:layout_width="match_parent"
            style="@style/ediText"
            android:hint="@string/tarjeta"
            android:inputType="text"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnGuardarSalidaVisitas"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="@string/guardar"
        style="@style/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lPadreVi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>