<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.entrada.EntradaMainActivity"
    style="@style/styleApp"
    android:id="@+id/menuEntrada">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tvTitle"
        android:text="@string/tituloEntrada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lnPadre"
        android:layout_marginTop="20dp"
        />
    <ScrollView
        android:id="@+id/lnPadre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:isScrollContainer="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="15dp"
                    >
                    <androidx.cardview.widget.CardView
                        android:id="@+id/personalEntradaBtn"
                        android:layout_height="wrap_content"
                        style="@style/cvButton">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/cvLinnearLayout">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/ic_personal"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/personal"
                                style="@style/tvSubtitle"/>
                            <View
                                android:layout_width="match_parent"
                                style="@style/viewLine"
                                android:background="@color/line_personal"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/visitaEntradaBtn"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        style="@style/cvButton">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/cvLinnearLayout">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/ic_people"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/visitas"
                                style="@style/tvSubtitle"/>
                            <View
                                android:layout_width="match_parent"
                                style="@style/viewLine"
                                android:background="@color/line_visitas"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/vehiculoEntranaBtn"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        style="@style/cvButton">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/cvLinnearLayout">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/ic_car"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vehiculos"
                                style="@style/tvSubtitle"/>
                            <View
                                android:layout_width="match_parent"
                                style="@style/viewLine"
                                android:background="@color/line_vehiculos"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>